<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>epos_hardware</name>
  <version>1.0.0</version>
  <description>Hardware interface for Maxon Epos 2/4 motor controllers.</description>
  <maintainer email="rick.vanessen@wur.nl">Rick-v-E</maintainer>
  <license file="LICENCE">MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
